Name:           terminfo
Cabal-Version:  >=1.1.4
Version:        0.0
License:        BSD3
License-File:   LICENSE
Copyright:      (c) Judah Jacobson
Author:         Judah Jacobson
Maintainer:     Judah Jacobson <judah.jacobson@gmail.com>
Category:       User Interfaces
Synopsis:       Haskell interface to the terminfo library.
Stability:      Experimental
Build-depends:  base>=1.0
extra-libraries:curses
Extensions:     TypeSynonymInstances, FlexibleInstances, 
                ForeignFunctionInterface
Exposed-Modules:
                System.Console.Terminfo.Base
